# hawkapi-sso

./: CHANGELOG.md  README.md  pyproject.toml
src/hawkapi_sso/: __init__.py  _base.py  _discord.py  _facebook.py  _github.py  _google.py  _linkedin.py  _microsoft.py  _oidc.py  _plugin.py  _routes.py  _state.py
tests/: conftest.py  oidc_helpers.py  test_google.py  test_oidc.py  test_providers.py  test_routes.py  test_state.py
